syntax = "proto3";

package pb;

option go_package = "github.com/steve-mir/diivix_backend/pb";

// The request message for initiating a password reset process.
message RequestPasswordResetRequest {
  string email = 1; // The email of the user who has forgotten their password.
}

// The response message for the RequestPasswordReset RPC method.
message RequestPasswordResetResponse {
  string message = 1;        // An optional message, e.g., for error details.
}

// The request message for resetting the user's password using a reset token.
message ResetPasswordRequest {
  string token = 1;          // The password reset token that was sent to the user's email.
  string new_password = 2;   // The new password that the user wants to set.
}

// The response message for the ResetPassword RPC method.
message ResetPasswordResponse {
  string message = 1;        // An optional message, e.g., for error details.
}